--- a/src/containers/Details/Details.module.css
+++ b/src/containers/Details/Details.module.css
@@ -1,5 +1,5 @@
 .Container {
-  composes: Container from "../App/App.module.css";
+  composes: Container from "../Home/Home.module.css";
 }
 
 .Searchbar {
